--- a/demo/index.html
+++ b/demo/index.html
@@ -84,6 +84,7 @@
                 <label class="form-select__label">City</label>
                 <span class="form-select__text"></span>
                 <select class="form-select__select">
+                    <option selected disabled>Choose a city...</option>
                     <option>Ekaterinburg</option>
                     <option>Kazan</option>
                     <option>Moscow</option>
